--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html ng-app="MatchFlick">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>MatchFlick</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" media="screen" title="no title">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
     <link rel="icon"
       type="image/png"
