--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
       type="image/png"
       href="./images/favicon.png">
   </head>
-  <body>
+  <body ng-controller="mainCtrl">
 
     <ui-view></ui-view>
 
+    <script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
     <script src="./bundle.js" charset="utf-8"></script>
   </body>
 </html>
